# streamberry-desktop

./: CHANGELOG.md  CMakeLists.txt  README.md  resources.qrc  streamberry-desktop.desktop
.github/workflows/: release.yml
src/: main.cpp
src/network/: discovery.cpp  discovery.h  stream_client.cpp  stream_client.h
src/ui/: mainwindow.cpp  mainwindow.h
src/video/: decoder.cpp  decoder.h  virtual_cam.cpp  virtual_cam.h
